--- a/_includes/focus.html
+++ b/_includes/focus.html
@@ -9,6 +9,7 @@
                                     <h2 data-2400="opacity:0; transform: translate(0,90px);" data-3000="opacity:1; transform: translate(0,0);">"The trick isn't adding stuff. It's taking away."</h2>
                                       <small data-2400="opacity:0; transform: translate(0,90px)" data-3000="opacity:1; transform: translate(0,0px)"><i class="icon-comment-alt"></i> Mark Zuckerberg</small>
                                       <img src="{{ site.url }}/img/facebook.jpg" class="img-circle" data-2400="transform[bounce]: scale(0); opacity:0" data-3000="transform: scale(1); opacity: 1;">
+                                    <p>Geen ellenlange lappen tekst, geen overbodige informatie of zinloze afbeeldingen. Inhoud die er toe doet en gericht is op resultaat. Dat is de focus van Coast.</p>
                                 </div>
                             </div>
                         </div>
@@ -17,72 +18,53 @@
             </div>
     </section>
 
-    <section class="focus" data-3400="left:100%;" data-4000="left: 0%;" data-4200="top: 0%;" data-4800="top: -100%">
+
+    <section class="focus-blocks"  data-4200="top: 100%;" data-4800="top: 0%" data-5000="opacity:1;" data-5400="opacity:0;" data-5401="top: -100%;">
         <div class="container">
-            <div class="vert-center">
-                <div class="row">
-                    <div class="col-6">
-                    <h1>Focus</h1>
-                       <p>Daar geloven wij in. Er zijn ontzettend veel websites te vinden waarbij je amper kunt vinden wat je zoekt tussen de ongelooflijke hoeveelheid overbodige content en randinformatie. Er zijn nog steeds ontzettend veel mensen die denken dat je daardoor betere Google rankings behaalt. Yeah wright...</p>
-
-                        <p>Coast gelooft in focus. Waarom moeten surfers kopen wat jij verkoopt en hoe kunnen ze dat het snelste doen...</p>
-                        <h4>Dat is waar het om gaat toch?</h4>
-                        <a href="#" class="btn btn-large">COAST is doelgericht</a>
-
-                    </div>
-                    <div class="col-6 tablet-background">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section class="focus-blocks"  data-4200="top: 100%;" data-4800="top: 0%" data-5000="top: 0%;" data-5400="top:-100%;">
-        <div class="flexslider" id="voordelen">
-            <ul class="slides">
-                <li class="leads active-slide" id="bekijks">
-                    <div class="overlay meerleads"></div>
-                    <div class="overlay mailone"></div>
-                    <div class="overlay mailtwo"></div>
-                    <div class="overlay mailthree"></div>
-                    <div class="container">
-                        <div class="vert-center">
-                            <div class="row text-box">
-                                <div class="col-5">
-                                    <h1>meer <span>leads</span></h1>
-                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Website bezoekers laten niet zomaar hun contactgegevens achter. Een professionele website met een eenvoudig aanmeldproces zal direct meer leads opleveren.</p>
+            <div class="flexslider row" id="voordelen">
+                <ul class="slides">
+                    <li class="leads active-slide" id="bekijks">
+                        <div class="overlay meerleads"></div>
+                        <div class="overlay mailone"></div>
+                        <div class="overlay mailtwo"></div>
+                        <div class="overlay mailthree"></div>
+                        <div class="container">
+                            <div class="vert-center">
+                                <div class="row text-box">
+                                    <div class="col-md-5">
+                                        <h1>meer <span>leads</span></h1>
+                                        <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                       <p>Website bezoekers laten niet zomaar hun contactgegevens achter. Een professionele website met een eenvoudig aanmeldproces zal direct meer leads opleveren.</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="verkopen active-slide">
-                    <div class="overlay boxone"></div>
-                    <div class="overlay boxtwo"></div>
-                    <div class="overlay meerverkopen"></div>
-                    <div class="container">
-                        <div class="vert-center">
-                            <div class="row text-center text-box">
-                                <div class="col-4 col-offset-8">
-                                    <h1>Meer Verkopen</h1>
-                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>User experience, daar draait het allemaal om. Dat betekent niet alleen aandacht voor eenvoudige bediening, maar ook voor het vertellen van een geanimeerd verhaal dat bezoekers tot actie aan zet.</p> 
-                                   </p>
+                    </li>
+                    <li class="verkopen active-slide">
+                        <div class="overlay boxone"></div>
+                        <div class="overlay boxtwo"></div>
+                        <div class="overlay meerverkopen"></div>
+                        <div class="container">
+                            <div class="vert-center">
+                                <div class="row text-center text-box">
+                                    <div class="col-md-4 col-md-offset-8">
+                                        <h1>Meer Verkopen</h1>
+                                        <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                       <p>User experience, daar draait het allemaal om. Dat betekent niet alleen aandacht voor eenvoudige bediening, maar ook voor het vertellen van een geanimeerd verhaal dat bezoekers tot actie aan zet.</p> 
+                                       </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="volgers">
-                    <div class="phones overlay"></div>
-                    <div class="overlay overlay-img"></div>
-                    <div class="overlay pop-up"></div>
-                    <div class="container">
+                    </li>
+                    <li class="volgers">
+                        <div class="phones overlay"></div>
+                        <div class="overlay overlay-img"></div>
+                        <div class="overlay pop-up"></div>
+                        
                         <div class="vert-center">
                             <div class="row text-center text-box">
-                                <div class="col-5 col-offset-6">
+                                <div class="col-md-5 col-md-offset-6">
                                     <div class="page-header">
                                         <h1><img class="img-circle" src="http://progroep.github.io/Sharebiz/img/hans-ouwerkerk.jpg"> <small>meer</small> <span>volgers</span></h1>
                                     </div>
@@ -109,121 +91,101 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
-                </li>
-                <li class="bekijks">
-                    <div class="container">
-                        <div class="vert-center">
-                            <div class="row text-center text-box">
-                                <div class="col-6 col-offset-6">
-                                    <h1>Meer bekijks</h1>
-                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Een unieke site wordt sneller gedeeld op social media, met vrienden en familie of op het werk. Dit resulteerd in meer traffic en dus meer potentiële klanten.</p>
+                        
+                    </li>
+                    <li class="bekijks">
+                            <div class="vert-center">
+                                <div class="row text-center text-box">
+                                    <div class="col-md-6 col-md-offset-6">
+                                        <h1>Meer bekijks</h1>
+                                        <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                       <p>Een unieke site wordt sneller gedeeld op social media, met vrienden en familie of op het werk. Dit resulteerd in meer traffic en dus meer potentiële klanten.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="downloads">
-                    <div class="container">
-                        <div class="vert-center">
-                            <div class="row text-center text-box">
-                                <div class="col-6">
-                                    <h1>Meer downloads</h1>
-                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Het begeleiden van de bezoekers naar een sterke call-to-action op de site zorgt er voor dat je product, productinformatie of white-paper vaker wordt gedownload.</p>
+                    </li>
+                    <li class="downloads">
+                            <div class="vert-center">
+                                <div class="row text-center text-box">
+                                    <div class="col-md-6">
+                                        <h1>Meer downloads</h1>
+                                        <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                       <p>Het begeleiden van de bezoekers naar een sterke call-to-action op de site zorgt er voor dat je product, productinformatie of white-paper vaker wordt gedownload.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="signups">
-                    <div class="container">
-                        <div class="vert-center">
-                            <div class="row text-center text-box">
-                                <div class="col-6 col-offset-6">
-                                    <h1>Meer signups</h1>
-                                    <img src="{{ site.url }}/img/temp.png" class="visible-sm">
-                                   <p>Een betrouwbare en goed opgebouwde website zorgt voor een snellere groei van een email database.</p>
+                    </li>
+                    <li class="signups">
+                            <div class="vert-center">
+                                <div class="row text-center text-box">
+                                    <div class="col-md-6 col-md-offset-6">
+                                        <h1>Meer signups</h1>
+                                        <img src="{{ site.url }}/img/temp.png" class="visible-sm">
+                                       <p>Een betrouwbare en goed opgebouwde website zorgt voor een snellere groei van een email database.</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        
-        <div class="blocks" class="hidden-sm">
-            <div class="container">
-                <div class="row">
-                    <div class="col-6 col-sm-4 col-lg-2">
-                    <a class="slide_thumb" rel="0" href="#">
-                        <div class="well" data-3400="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3600="opacity:1; transform: scale(1) translate(0, 0);">
+                    </li>
+                </ul>
+            </div>
+            
+            <div class="blocks row" class="hidden-sm">
+                <div class="col-6 col-sm-4 col-lg-2">
+                <a class="slide_thumb" rel="0" href="#">
+
+                        <span class="icon-stack">
+                          <i class="icon-circle icon-stack-base"></i>
+                          <i class="icon-thumbs-up"></i>
+                        </span>
+                        <h6><small>meer</small><br> leads</h6>
+                </a>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <a class="slide_thumb" rel="1" href="#">
                             <span class="icon-stack">
                               <i class="icon-circle icon-stack-base"></i>
-                              <i class="icon-thumbs-up"></i>
+                              <i class="icon-shopping-cart"></i>
                             </span>
-                            <h6><small>meer</small><br> leads</h6>
-                        </div>
+                            <h6><small>meer</small><br> verkopen</h6>
                     </a>
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <a class="slide_thumb" rel="1" href="#">
-                            <div class="well" data-3450="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3650="opacity:1; transform: scale(1) translate(0, 0);">
-                                <span class="icon-stack">
-                                  <i class="icon-circle icon-stack-base"></i>
-                                  <i class="icon-shopping-cart"></i>
-                                </span>
-                                <h6><small>meer</small><br> verkopen</h6>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <a class="slide_thumb" rel="2" href="#">
-                            <div class="well" data-3500="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3700="opacity:1; transform: scale(1) translate(0, 0);">
-                                <span class="icon-stack">
-                                  <i class="icon-circle icon-stack-base"></i>
-                                  <i class="icon-facebook"></i>
-                                </span>
-                                <h6><small>meer</small><br> volgers</h6>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <a class="slide_thumb" rel="3" href="#">
-                          <div class="well"  data-3550="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3750="opacity:1; transform: scale(1) translate(0, 0);">
-                                <span class="icon-stack">
-                                  <i class="icon-circle icon-stack-base"></i>
-                                  <i class="icon-eye-open"></i>
-                                </span>
-                                <h6><small>meer</small><br> bekijks</h6>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <a class="slide_thumb" rel="4" href="#">
-                            <div class="well"  data-3600="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3770="opacity:1; transform: scale(1) translate(0, 0);">
-                                <span class="icon-stack">
-                                  <i class="icon-circle icon-stack-base"></i>
-                                  <i class="icon-cloud-download"></i>
-                                </span>
-                                <h6><small>meer</small><br> downloads</h6>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-6 col-sm-4 col-lg-2">
-                        <a class="slide_thumb" rel="5" href="#">
-                           <div class="well"  data-3650="opacity:0; transform[swing]: scale(1.5) translate(-50px, 0);" data-3800="opacity:1; transform: scale(1) translate(0, 0);">
-                                <span class="icon-stack">
-                                  <i class="icon-circle icon-stack-base"></i>
-                                  <i class="icon-edit"></i>
-                                </span>
-                                <h6><small>meer</small><br> signups</h6>
-                            </div>
-                        </a>
-                    </div>
-                    
                 </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <a class="slide_thumb" rel="2" href="#">
+                            <span class="icon-stack">
+                              <i class="icon-circle icon-stack-base"></i>
+                              <i class="icon-facebook"></i>
+                            </span>
+                            <h6><small>meer</small><br> volgers</h6>
+                    </a>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <a class="slide_thumb" rel="3" href="#">
+                            <span class="icon-stack">
+                              <i class="icon-circle icon-stack-base"></i>
+                              <i class="icon-eye-open"></i>
+                            </span>
+                            <h6><small>meer</small><br> bekijks</h6>
+                    </a>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <a class="slide_thumb" rel="4" href="#">
+                            <span class="icon-stack">
+                              <i class="icon-circle icon-stack-base"></i>
+                              <i class="icon-cloud-download"></i>
+                            </span>
+                            <h6><small>meer</small><br> downloads</h6>
+                    </a>
+                </div>
+                <div class="col-6 col-sm-4 col-lg-2">
+                    <a class="slide_thumb" rel="5" href="#">
+                            <span class="icon-stack">
+                              <i class="icon-circle icon-stack-base"></i>
+                              <i class="icon-edit"></i>
+                            </span>
+                            <h6><small>meer</small><br> signups</h6>
+                    </a>
+                </div>
+                        
             </div>
         </div>
     </section>
